argocd/apps/homebox/namespace.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: homebox
  labels:
    name: homebox
