argocd/apps/homebox/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: homebox
  namespace: homebox
  labels:
    app: homebox
spec:
  selector:
    matchLabels:
      app: homebox
  replicas: 1
  template:
    metadata:
      labels:
        app: homebox
    spec:
      containers:
        - name: homebox
          image: ghcr.io/hay-kot/homebox:v0.10.2-rootless
          imagePullPolicy: Always
          ports:
            - containerPort: 7745
              protocol: TCP
          volumeMounts:
            - mountPath: /data
              name: homebox-data
              readOnly: False
          resources: {}
      restartPolicy: Always
      volumes:
        - name: homebox-data
          persistentVolumeClaim:
            claimName: homebox-data
