argocd/apps/homebox/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name:  homebox
  namespace: homebox
spec:
  selector:
    app:  homebox
  type: ClusterIP
  ports:
    - name: homebox
      port: 7745
      protocol: TCP
      targetPort: 7745
