argocd/apps/homebox/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: homebox
  namespace: homebox
spec:
  ingressClassName: nginx
  rules:
  - host: homebox.legion.lan
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: homebox
            port:
              number: 7745
